updating post and adjusting styles

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -445,8 +445,8 @@
  * Code higlighting
  */
   .highlight {
-    background-color: #191f26 !important;
-    border: none !important;
+    background-color: #191f26;
+    border: none;
   }
 }
 
