--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -182,7 +182,6 @@
       top: 9px;
       right: 30px;
       background-color: $background-color;
-      border: 1px solid $grey-color-light;
       border-radius: 5px;
       text-align: right;
 
@@ -426,8 +425,7 @@
       position: absolute;
       top: 9px;
       right: 30px;
-      background-color: $background-color;
-      border: 1px solid $grey-color-light;
+      background-color: $dark-background-color;
       border-radius: 5px;
       text-align: right;
 
@@ -445,7 +443,7 @@
           height: 15px;
 
           path {
-            fill: $grey-color-dark;
+            fill: $dark-text-color;
           }
         }
       }
