--- a/_includes/header.html
+++ b/_includes/header.html
@@ -66,6 +66,7 @@
       </a>
 
       <div class="trigger">
+        <a href="/about">About</a> |
         <a href="https://boa-dev.github.io/boa/dev/bench/">Benchmarks</a> |
         <a href="https://boa-dev.github.io/boa/test262/">Conformance</a> |
         <a href="https://boa-dev.github.io/boa/">Playground</a> |
