--- a/_includes/header.html
+++ b/_includes/header.html
@@ -67,6 +67,7 @@
 
       <div class="trigger">
         <a href="/about">About</a> |
+        <a href="https://github.com/boa-dev/boa">Github</a> |
         <a href="https://boa-dev.github.io/boa/dev/bench/">Benchmarks</a> |
         <a href="https://boa-dev.github.io/boa/test262/">Conformance</a> |
         <a href="https://boa-dev.github.io/boa/">Playground</a> |
