--- a/_includes/header.html
+++ b/_includes/header.html
@@ -43,7 +43,7 @@
     }
   </script>
   <div class="wrapper">
-    <a class="site-title" href="{{ site.baseurl }}/"
+    <a class="site-title" href="{{ site.baseurl }}"
       ><img id="site-logo" src="{{ site.logo }}" /> {{ site.title }}</a
     >
 
