--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -238,13 +238,13 @@
 
   .footer-heading {
     font-size: 18px;
-    margin-bottom: $spacing-unit / 2;
+    margin-bottom: calc($spacing-unit / 2);
   }
 
   .footer-links {
     text-align: center;
     font-size: 18px;
-    margin-bottom: $spacing-unit / 2;
+    margin-bottom: calc($spacing-unit / 2);
   }
 
   .contact-list,
@@ -256,14 +256,14 @@
   .footer-col-wrapper {
     font-size: 15px;
     color: $grey-color;
-    margin-left: -$spacing-unit / 2;
+    margin-left: -(calc($spacing-unit / 2));
     @include clearfix();
   }
 
   .footer-col {
     float: left;
-    margin-bottom: $spacing-unit / 2;
-    padding-left: $spacing-unit / 2;
+    margin-bottom: calc($spacing-unit / 2);
+    padding-left: calc($spacing-unit / 2);
   }
 
   .footer-col-1 {
@@ -490,13 +490,13 @@
 
   .footer-heading {
     font-size: 18px;
-    margin-bottom: $spacing-unit / 2;
+    margin-bottom: calc($spacing-unit / 2);
   }
 
   .footer-links {
     text-align: center;
     font-size: 18px;
-    margin-bottom: $spacing-unit / 2;
+    margin-bottom: calc($spacing-unit / 2);
   }
 
   .contact-list,
@@ -508,14 +508,14 @@
   .footer-col-wrapper {
     font-size: 15px;
     color: $grey-color;
-    margin-left: -$spacing-unit / 2;
+    margin-left: -(calc($spacing-unit / 2));
     @include clearfix();
   }
 
   .footer-col {
     float: left;
-    margin-bottom: $spacing-unit / 2;
-    padding-left: $spacing-unit / 2;
+    margin-bottom: calc($spacing-unit / 2);
+    padding-left: calc($spacing-unit / 2);
   }
 
   .footer-col-1 {
