--- a/css/main.scss
+++ b/css/main.scss
@@ -1,28 +1,23 @@
----
-# Only the main Sass file needs front matter (the dashes are enough)
----
 @charset "utf-8";
-
-
 
 // Our variables
 $base-font-family: Helvetica, Arial, sans-serif;
-$base-font-size:   16px;
-$small-font-size:  $base-font-size * 0.875;
+$base-font-size: 16px;
+$small-font-size: $base-font-size * 0.875;
 $base-line-height: 1.5;
 
-$spacing-unit:     30px;
+$spacing-unit: 30px;
 
-$text-color:       #111;
+$text-color: #111;
 $background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$brand-color: #2a7ae2;
 
-$grey-color:       #828282;
+$grey-color: #828282;
 $grey-color-light: lighten($grey-color, 40%);
-$grey-color-dark:  darken($grey-color, 25%);
+$grey-color-dark: darken($grey-color, 25%);
 
-$on-palm:          600px;
-$on-laptop:        800px;
+$on-palm: 600px;
+$on-laptop: 800px;
 
 $dark-background-color: #0f1419;
 $dark-text-color: #c5c5c5;
@@ -35,32 +30,30 @@ $dark-text-color: #c5c5c5;
 //     }
 // }
 @mixin media-query($device) {
-    @media screen and (max-width: $device) {
-        @content;
-    }
+  @media screen and (max-width: $device) {
+    @content;
+  }
 }
 
 // Import partials from `sass_dir` (defaults to `_sass`)
-@import
-       "base",
-       "layout",
-       "syntax-highlighting"
-;
+@import "../_sass/base", "../_sass/layout";
 
-td, th {
-    border-bottom: 1px solid #eee;
-    border-right: 1px solid #eee;
+td,
+th {
+  border-bottom: 1px solid #eee;
+  border-right: 1px solid #eee;
 }
 
 th {
-    border-top: 1px solid #eee;
+  border-top: 1px solid #eee;
 }
 
-td:first-child, th:first-child {
-    border-left: 1px solid #eee;
+td:first-child,
+th:first-child {
+  border-left: 1px solid #eee;
 }
 
 hr {
-    margin: 15px 0;
-    clear: both;
+  margin: 15px 0;
+  clear: both;
 }
