--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -2,7 +2,7 @@
   /**
     * Syntax highlighting styles
     */
-  code {
+  pre code {
     background: #fff;
     margin-bottom: calc($spacing-unit / 2);
 
@@ -207,7 +207,7 @@
   /**
     * Syntax highlighting styles
     */
-  code {
+  pre code {
     background: #191f26;
     margin-bottom: calc($spacing-unit / 2);
 
