--- a/_includes/header.html
+++ b/_includes/header.html
@@ -70,7 +70,7 @@
         <a href="https://github.com/boa-dev/boa">Github</a> |
         <a href="https://boa-dev.github.io/boa/dev/bench/">Benchmarks</a> |
         <a href="https://boa-dev.github.io/boa/test262/">Conformance</a> |
-        <a href="https://boa-dev.github.io/boa/">Playground</a> |
+        <a href="https://boa-dev.github.io/boa/playground">Playground</a> |
         <a href="https://boa-dev.github.io/boa/doc/boa/index.html">Docs</a>
       </div>
     </nav>
