--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,7 @@
     <meta property="og:description" content="{{ site.description }}" />
     <meta property="og:title" content="{{ page.title }}" />
 
+    <style>@import url('https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap');</style>
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@{{ site.twitter_username }}" />
