Fixed "sun" icon in MacOS 12

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -48,7 +48,7 @@
       }
 
       .font-sun-o:before {
-        content: "\1F323";
+        content: "\2600";
       }
 
       .font-moon-o:before {
