--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,9 @@
     <meta property="og:description" content="{{ site.description }}" />
     <meta property="og:title" content="{{ page.title }}" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@{{ site.twitter_username }}" />
