--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,8 @@
       </div>
     </div>
 
+    <script src="https://opencollective.com/boa/banner.js"></script>
+
     {% include "footer.html" %}
 
   </body>
