--- a/css/main.scss
+++ b/css/main.scss
@@ -1,7 +1,9 @@
 @charset "utf-8";
 
+@use "./prism.css";
+@use "./center-img.css";
 // Our variables
-$base-font-family: 'Fira Sans', Helvetica, Arial, sans-serif;
+$base-font-family: "Fira Sans", Helvetica, Arial, sans-serif;
 $base-font-size: 16px;
 $small-font-size: $base-font-size * 0.875;
 $base-line-height: 1.5;
