--- a/_includes/header.html
+++ b/_includes/header.html
@@ -43,18 +43,17 @@
     }
   </script>
   <div class="wrapper">
-    <a class="site-title" href="{{ site.baseurl }}"
-      ><img id="site-logo" src="{{ site.logo }}" /> {{ site.title }}</a
-    >
+    <a class="site-title" href="{{ site.baseurl }}">
+      <img id="site-logo" src="{{ site.logo }}" /> {{ site.title }}</a>
 
     <nav class="site-nav">
       <div class="trigger">
         <a href="/about">About</a> |
         <a href="https://github.com/boa-dev/boa">Github</a> |
-        <a href="https://boa-dev.github.io/boa/dev/bench/">Benchmarks</a> |
-        <a href="https://boa-dev.github.io/boa/test262/">Conformance</a> |
-        <a href="https://boa-dev.github.io/boa/playground">Playground</a> |
-        <a href="https://boa-dev.github.io/boa/doc">Docs</a>
+        <a href="/boa/dev/bench/">Benchmarks</a> |
+        <a href="/boa/test262/">Conformance</a> |
+        <a href="/boa/playground">Playground</a> |
+        <a href="https://docs.rs/boa_engine">Docs</a>
       </div>
     </nav>
   </div>
