- adds default build - improves the spacing for wider screens - Defers loading of mermaid.js

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,8 +28,7 @@
     <meta name="twitter:description" content="{{ site.description | xml_escape }}" />
     {% endif %}
     <meta name="twitter:url" content="{{ site.root }}{{ page.url }}">
-    <script src="https://unpkg.com/mermaid/dist/mermaid.min.js"></script>
-    <script>mermaid.initialize({ startOnLoad: true });</script>
+    <script defer src="https://unpkg.com/mermaid/dist/mermaid.min.js"></script>
     <noscript>
         <style>
             .site-switch-theme {display:none;}
