--- a/css/main.scss
+++ b/css/main.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 // Our variables
-$base-font-family: 'Fira Sans', Helvetica, Arial, sans-serif;
+$base-font-family: "Fira Sans", Helvetica, Arial, sans-serif;
 $base-font-size: 16px;
 $small-font-size: $base-font-size * 0.875;
 $base-line-height: 1.5;
@@ -18,6 +18,7 @@ $grey-color-dark: darken($grey-color, 25%);
 
 $on-palm: 600px;
 $on-laptop: 800px;
+$on-desktop: 1440px;
 
 $dark-background-color: #0f1419;
 $dark-text-color: #c5c5c5;
@@ -31,6 +32,12 @@ $dark-text-color: #c5c5c5;
 // }
 @mixin media-query($device) {
   @media screen and (max-width: $device) {
+    @content;
+  }
+}
+
+@mixin media-query-min($device) {
+  @media screen and (min-width: $device) {
     @content;
   }
 }
