- Remove redirect of mermaid - put opencollective's script as low priority (its at the bottom of the page)

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,7 +28,7 @@
     <meta name="twitter:description" content="{{ site.description | xml_escape }}" />
     {% endif %}
     <meta name="twitter:url" content="{{ site.root }}{{ page.url }}">
-    <script defer src="https://unpkg.com/mermaid/dist/mermaid.min.js"></script>
+    <script defer src="https://unpkg.com/mermaid@10.2.3/dist/mermaid.min.js"></script>
     <noscript>
         <style>
             .site-switch-theme {display:none;}
