--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,11 @@
       <div class="wrapper">{{ content }}</div>
     </div>
 
-    <script src="https://opencollective.com/boa/banner.js"></script>
+    <script
+      fetchpriority="low"
+      defer
+      src="https://opencollective.com/boa/banner.js"
+    ></script>
 
     {% include "footer.html" %}
     <script>
