--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,46 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #00678e;
+  --ifm-color-primary-dark: #005d80;
+  --ifm-color-primary-darker: #005879;
+  --ifm-color-primary-darkest: #004863;
+  --ifm-color-primary-light: #00719c;
+  --ifm-color-primary-lighter: #0076a3;
+  --ifm-color-primary-lightest: #007faf;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+
+  /* Custom footer color */
+  --ifm-footer-background-color: #cde7f1;
+}
+
+:root {
+  /*Layout background color */
+  --ifm-background-color: #ffffff;
+  /*Navbar color*/
+  --ifm-background-surface-color: #ffffff;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #f3ff00;
+  --ifm-color-primary-dark: #dbe600;
+  --ifm-color-primary-darker: #cfd900;
+  --ifm-color-primary-darkest: #aab300;
+  --ifm-color-primary-light: #f4ff1a;
+  --ifm-color-primary-lighter: #f5ff26;
+  --ifm-color-primary-lightest:#f7ff4d;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+
+  /* Custom footer color */
+  --ifm-footer-background-color: #353535;
+}
+
+html[data-theme='dark'] {
+  /*Layout background color */
+  --ifm-background-color: #505050;
+
+  /*Navbar color*/
+  --ifm-background-surface-color: #353535;
 }
