--- a/src/components/conformance/ResultsDisplay/styles.module.css
+++ b/src/components/conformance/ResultsDisplay/styles.module.css
@@ -9,6 +9,8 @@
 }
 
 .resultsNav {
+    display:flex;
+    flex-direction: row;
     height: 5vh;
     width: 100%;
     padding: 0.75em;
@@ -16,4 +18,9 @@
 
 .navLink:hover {
     cursor:pointer;
+}
+
+.dropdownContainer {
+    width: 6em;
+    padding: 0.25em;
 }
