Finish up initial conformance page features & fix blog mdx error

--- a/src/components/conformance/SuiteDataContainer/styles.module.css
+++ b/src/components/conformance/SuiteDataContainer/styles.module.css
@@ -1,12 +1,23 @@
 
 .dataContainer {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: 100%;
 }
 
 .dataCardContainer {
     min-width: 10em;
-    width: 60%;
-    max-height: 30em;
-    margin: 2.5em;
+    width: 90%;
+    margin: 1em;
+}
+
+.gridStyle {
+    min-height: 8em;
+    max-height: 12em;
+    min-width: 8em;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    overflow-y: auto;
 }
