--- a/src/components/conformance/SuiteDisplay/styles.module.css
+++ b/src/components/conformance/SuiteDisplay/styles.module.css
@@ -3,3 +3,12 @@
     flex-direction: row;
     height: 80vh;
 }
+
+@media screen and (max-width: 996px) {
+    .suiteDisplay {
+        flex-direction: column;
+        min-height: 60vh;
+        height: auto;
+        padding: 0.5rem auto;
+    }
+}
