--- a/src/components/conformance/Banner/styles.module.css
+++ b/src/components/conformance/Banner/styles.module.css
@@ -4,27 +4,28 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    padding: 5rem 15rem;
+    padding: 8rem;
 }
 
 .cardContainer {
-    width: 20rem;
-    height: 20rem;
-    margin: 5em 2.5em;
+    width: 22rem;
+    height: 22rem;
+    padding: 5rem 2.5rem;
 }
 
-@media screen and (max-height: 996px) {
+@media screen and (max-width: 996px) {
     .bannerSection {
-        min-height: 90vh;
+        min-height: 40rem;
         flex-direction: column;
         align-items: center;
         width: 100vw;
-        padding: 0;
+        padding: 1rem;
     }
 
     .cardContainer {
-        width: 17rem;
-        width: 17rem;
-        margin: 0.125rem auto;
+        width: 22rem;
+        width: 22rem;
+        margin: 0.125rem;
+        padding: 2rem;
     }
 }
