Clean up and overhaul styling

--- a/src/components/conformance/ResultsDisplay/styles.module.css
+++ b/src/components/conformance/ResultsDisplay/styles.module.css
@@ -28,7 +28,7 @@
 @media screen and (max-height: 996px) {
     .resultsDisplay {
         height: auto;
-        width:100vw;
+        width:calc(100vw-12px);
     }
 
     .resultsNav {
