--- a/src/components/conformance/Banner/styles.module.css
+++ b/src/components/conformance/Banner/styles.module.css
@@ -17,15 +17,14 @@
     .bannerSection {
         min-height: 40rem;
         flex-direction: column;
-        align-items: center;
-        width: 100vw;
-        padding: 1rem;
+        width: 100%;
+        padding: 0.5rem;
     }
 
     .cardContainer {
-        width: 22rem;
-        width: 22rem;
-        margin: 0.125rem;
-        padding: 2rem;
+        width: 18rem;
+        width: 18rem;
+        margin: auto;
+        padding: 0.75rem;
     }
 }
