--- a/src/components/conformance/ResultsDisplay/suite/SuiteDataContainer/styles.module.css
+++ b/src/components/conformance/ResultsDisplay/suite/SuiteDataContainer/styles.module.css
@@ -3,13 +3,13 @@
     display: flex;
     flex-direction: column;
     width: 85%;
-    height: 100vh;
+    height: 70vh;
 }
 
 .dataCardContainer {
     min-width: 5em;
-    width: 90%;
-    margin: 1em;
+    width: calc(100vw - 50rem);
+    padding: 0.75rem;
 }
 
 .gridStyle {
@@ -23,12 +23,15 @@
 
 @media screen and (max-width: 996px) {
     .dataContainer {
-        padding: 1rem;
+        width: 100%;
         min-height: 50vh;
+        height: auto;
+        padding: 0.5rem;
     }
 
     .dataCardContainer {
+        margin: 0 auto;
         min-width: 9em;
-        width: 92vw;
+        width: 80vw;
     }
 }
