--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -24,7 +24,7 @@
   /*Layout background color */
   --ifm-background-color: #ffffff;
   /*Navbar color*/
-  --ifm-background-surface-color: #ffffff;
+  --ifm-background-surface-color: #cde7f1;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
