--- a/src/components/conformance/ResultsDisplay/components/SuiteSelector/styles.module.css
+++ b/src/components/conformance/ResultsDisplay/components/SuiteSelector/styles.module.css
@@ -38,7 +38,9 @@
 
 @media screen and (max-width: 996px) {
     .suiteSelector{
-        height: 35vh;
+        height: auto;
+        min-height: 5rem;
+        max-height: 12rem;
         padding: 0.5rem auto;
         width: 100%;
     }
