--- a/src/components/conformance/ResultsDisplay/components/SuiteDataContainer/styles.module.css
+++ b/src/components/conformance/ResultsDisplay/components/SuiteDataContainer/styles.module.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   width: 85%;
-  height: 70vh;
+  height: 75vh;
+  padding: 0.5rem;
 }
 
 @media screen and (max-width: 996px) {
