--- a/src/components/conformance/ResultsDisplay/styles.module.css
+++ b/src/components/conformance/ResultsDisplay/styles.module.css
@@ -10,7 +10,7 @@
 .resultsNav {
   display: flex;
   flex-direction: row;
-  height: 5vh;
+  height: 3.5rem;
   width: 100%;
   padding: 0.75em;
 }
@@ -20,8 +20,11 @@
 }
 
 .dropdownContainer {
-  width: 6em;
-  padding: 0.25em;
+  display: flex;
+  flex-direction: row;
+  width: 12rem;
+  height: 2.5rem;
+  padding: 0.5rem 0;
 }
 
 @media screen and (max-height: 996px) {
@@ -32,9 +35,8 @@
   }
 
   .resultsNav {
-    min-height: 3.5rem;
-    height: auto;
+    height: 3.5rem;
     width: 100vw;
-    padding: 1rem auto;
+    padding: 0.75rem auto;
   }
 }
