Show options for JS engines
- Hide V8 and SM by default

--- a/src/pages/benchmarks/styles.module.css
+++ b/src/pages/benchmarks/styles.module.css
@@ -2,3 +2,12 @@
   width: 90vw;
   align-self: center;
 }
+
+.benchmarkControls {
+  display: flex;
+  margin-bottom: 1rem;
+}
+
+.benchmarkLabelWrap {
+  margin-right: 1rem;
+}
