--- a/src/components/home/index.module.css
+++ b/src/components/home/index.module.css
@@ -8,14 +8,16 @@
   text-align: center;
   position: relative;
   overflow: hidden;
-  background: linear-gradient(rgba(0, 103, 142, 0.842), rgb(0, 103, 142)),
+  background:
+    linear-gradient(rgba(0, 103, 142, 0.842), rgb(0, 103, 142)),
     url(../../../static/img/new_logo_blue.svg);
   /* background-size: cover; */
 }
 
 html[data-theme="dark"] {
   .heroBanner {
-    background: linear-gradient(rgba(249, 255, 135, 0.842), rgb(249, 255, 135)),
+    background:
+      linear-gradient(rgba(249, 255, 135, 0.842), rgb(249, 255, 135)),
       url(../../../static/img/new_logo_yellow.svg);
   }
 }
